[tool.poetry]
name = "app"
version = "0.1.0"
description = "Computer Vision Hackpack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"

[tool.poetry.scripts]
app = "app.main:main"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
