[tool.poetry]
name = "app"
version = "0.1.0"
description = "Computer Vision Hackpack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
opencv-python = "^4.0"
ultralytics = "^8.0"
torch = "^1.7.0"  # Match the minimum requirement specified by ultralytics


[tool.poetry.scripts]
app = "app.main:main"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
